examples/bad/uuid_bad.mko
fn main() {
    let r = uuid_check("not-valid")
    match r {
        Ok(_) => print("unexpected")
        Err(e) => print(e)
    }
}
